# todo

./: .gitignore  .pre-commit-config.yaml  README.md  manage  manage.py  pyproject.toml
backend/: admin.py  models.py  views.py
backend/migrations/: 0001_initial.py  0002_rename_owner_task_owner_id.py  0003_alter_task_completed_at.py  0004_alter_task_created_at.py
backend/templates/: home.html
frontend/: package-lock.json  package.json  vite.config.ts
frontend/management/commands/: buildjs.py
frontend/src/: App.tsx  AuthContext.tsx  CSRFToken.tsx  Home.tsx  Login.tsx  NewTodoForm.tsx  TodoList.tsx  UpcomingTodoList.tsx  getCookie.tsx  main.tsx
theme/static_src/: package-lock.json  package.json  tailwind.config.js
theme/static_src/src/: styles.css
todo/: settings.py  urls.py
